# characterize

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/characterize/: __init__.py  __main__.py  descriptor.py  mime.py
src/characterize/data/: descriptor.py  plots.py
test/characterize/data/: test_descriptor.py
